<resources>
    <string name="app_name">shirink_app_git</string>
    <string name="action_settings">Settings</string>
    <string name="serial_num">序號</string>
    <string name="segmenttype_select">選擇時段型態: </string>
    <string name="plan_num">時制計畫</string>
    <string name="start_time">起始時間     </string>
    <string name="enter">下傳</string>
    <string name="reset">重新整理</string>
    <string name="cancel">取消</string>
    <string name="plan_setting">時制計畫設定</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="plan_time_setting">時制設定</string>
    <string name="plan_content_set">時制內容設定</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="mm_dd_yy_h_mmaa">MM/dd/yy</string>
    <string name="date_time_start">開始日期</string>
    <string name="thirsday">四</string>
    <string name="wednesday">三</string>
    <string name="friday">五</string>
    <string name="tuesday">二</string>
    <string name="segmenttype_8">時段型態8</string>
    <string name="segmenttype_9">時段型態9</string>
    <string name="segmenttype_10">時段型態10</string>
    <string name="segmenttype_11">時段型態11</string>
    <string name="segmenttype_12">時段型態12</string>
    <string name="segmenttype_13">時段型態13</string>
    <string name="segmenttype_14">時段型態14</string>
    <string name="segmenttype_15">時段型態15</string>
    <string name="segmenttype_16">時段型態16</string>
    <string name="segmenttype_17">時段型態17</string>
    <string name="segmenttype_18">時段型態18</string>
    <string name="monday">一</string>
    <string name="segmenttype_20">時段型態20</string>
    <string name="segmenttype_19">時段型態19</string>
    <string name="segmenttype_mark">時段型態:</string>
    <string name="specialday_segmenttype">特別日時段型態</string>
    <string name="segmenttype">時段型態</string>
    <string name="timeofday">周內日時段型態</string>
    <string name="timeofday_mark">周內日:</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="day_time_end">結束日期</string>
    <string name="subsegment">分相</string>
    <string name="subsegment_1">一</string>
    <string name="subsegment_2">二</string>
    <string name="segment_num">時相編號</string>
    <string name="label_set_plan">時制計畫設定</string>
    <string name="second">秒</string>
    <string name="plan_offset">時差</string>
    <string name="plan_cycle">週期</string>
    <string name="ped_red">行人紅燈</string>
    <string name="ped_flash">行人綠閃</string>
    <string name="yellow">黃燈</string>
    <string name="red">紅燈</string>
    <string name="green">綠燈</string>
    <string name="segment_8">八</string>
    <string name="segment_7">七</string>
    <string name="segment_6">六</string>
    <string name="segment_5">五</string>
    <string name="segment_4">四</string>
    <string name="segment_3">三</string>
    <string name="segment_num_mark">時相編號:</string>
    <string name="step_setting">步階設定</string>
    <string name="title_activity_step_setting">step_setting</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="output_board_num">輸出卡編號</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="seven">七</string>
    <string name="eight">八</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="straight">↑</string>
    <string name="ped_button_edit">行人觸動編輯</string>
    <string name="step5">步階5</string>
    <string name="step4">步階4</string>
    <string name="step3">步階3</string>
    <string name="step2">步階2</string>
    <string name="step1">步階1</string>
    <string name="plan_segment1">分相1</string>
    <string name="subsegment_X">第x分相</string>
    <string name="subsegment_">分相:</string>
    <string name="total_subsegment">/總分相數:</string>
    <string name="edit_mode">編輯模式</string>
    <string name="View_mode">檢視模式</string>
    <string name="password_old">目前密碼</string>
    <string name="password_new">新密碼</string>
    <string name="password_new_check">新密碼確認</string>
    <string name="ok">ok</string>
    <string name="allow_construction_setting">允許現場操作</string>
    <string name="refuse_construction_setting">不允許現場操作</string>
    <string name="allow_construction_view">只允許現場查看</string>
    <string name="GPS_link">連接GPS</string>
    <string name="Red_countdown">連接紅燈倒數</string>
    <string name="stop_report_hardcore_state">停止傳送硬體狀態</string>
    <string name="stop_report">停止回報</string>
    <string name="transfer_change_state">傳送變化</string>
    <string name="second_1">1秒鐘</string>
    <string name="second_2">2秒鐘</string>
    <string name="second_5">5秒鐘</string>
    <string name="minute_1">1分鐘</string>
    <string name="minute_5">5分鐘</string>
    <string name="in_time_stratage">目前控制策略:</string>
    <string name="light_direction_setting">燈號方位設定</string>
    <string name="ask_for_center_transfer_plan">要求中心下傳時制</string>
    <string name="title_activity_direction_setting">Direction_setting</string>
    <string name="direction">方位</string>
    <string name="north">北</string>
    <string name="EN">東北</string>
    <string name="E">東</string>
    <string name="sourth">南</string>
    <string name="W">西</string>
    <string name="wn">西北</string>
    <string name="es">東南</string>
    <string name="ws">西南</string>

    <string name="_0_7">0~7</string>
    <string name="OK">確認</string>
    <string name="chain_setting">連鎖功能設定</string>
    <string name="title_activity_red_countdown__setting">RedCountdown_Setting</string>
    <string name="redcount_ID">倒數顯示器編號:</string>
    <string name="zero">零</string>
    <string name="communication_state">通訊狀態:</string>
    <string name="disconnection">斷線</string>
    <string name="Redcount_state">倒數顯示器狀態</string>
    <string name="maxgreen">最大綠</string>
    <string name="mingreen">最小綠</string>
    <string name="di"> 第</string>
    <string name="subphase_mark">分相</string>
    <string name="total_subphase_mark">總分相:</string>
    <string name="phaseorder_mark">時相編號:</string>
    <string name="copy">複製</string>
    <string name="TotalLightBoardNum">輸出卡數:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
